Fixing alignment issues for >1 digit scores

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -749,7 +749,7 @@ iframe {
   height: 70px;
   text-align: center;
   position: relative;
-  right: 2px;
+  right: 5px;
 }
 
 .post .thumbnail img {
@@ -771,9 +771,9 @@ iframe {
 .downvote {
   height: 20px;
   width: 18px;
-  display: inline-block;
-  /* margin-left: auto;
-  margin-right: auto;*/
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   cursor: pointer;
 }
 
@@ -786,24 +786,24 @@ iframe {
 }
 
 .misctainer {
-  padding-left: .6em;
-  padding-right: .4em;
+  padding: 0 .2em 0 .6em;
 }
 
 .votebuttons {
   height: 100%;
-  min-width: 1em;
+  width: 35px;
   max-height: 70px;
-  padding: .15em .2em 0 .2em;
+  padding: 0.15em 0.2em 0em 0.2em;
   float: left;
-  margin-right: 8px;
-  max-width: 2.2em;
+  position: relative;
+  right: 5px;
 }
 
 .score {
   font-size: 17px;
   color: #505050;
-  margin: 5px 2px 5px 0px;
+  padding-right: 2px;
+  margin: 5px 0px 5px 0px;
   text-align: center;
   letter-spacing: normal;
 }
